[gd_scene load_steps=2 format=3 uid="uid://b58qicl7ca3mj"]

[ext_resource type="Script" path="res://src/Scripts/desafio3.gd" id="1_pf2p3"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_pf2p3")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0.207843, 0.478431, 0.439216, 0.556863)
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
offset_left = 461.0
offset_top = 29.0
offset_right = 690.0
offset_bottom = 52.0
grow_horizontal = 2
text = "O que é integrais duplas?"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 29.0
offset_top = 176.0
offset_right = 1144.0
offset_bottom = 291.0

[node name="Res1" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Integrais duplas são uma forma de integrar sobre uma área bidimensional, elas nos permitem calcular o volume sob uma superfície."
alignment = 0

[node name="Res2" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Integrais duplas são usadas exclusivamente para calcular a circunferência de figuras geométricas em um plano bidimensional."
alignment = 0

[node name="Res3" type="Button" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Integrais duplas são uma técnica de integração onde se calcula a área de uma linha curva em um espaço tridimensional."
alignment = 0

[connection signal="pressed" from="VBoxContainer/Res1" to="." method="_on_res_1_pressed"]
[connection signal="pressed" from="VBoxContainer/Res2" to="." method="_on_res_2_pressed"]
[connection signal="pressed" from="VBoxContainer/Res3" to="." method="_on_res_3_pressed"]
